  implementation of the Mersenne Twister to the SIMD-oriented Fast 
  Mersenne Twister
- Add an --accessors option to the "varlist" command, to expose the 
  list of currently available accessor ("dollar") variables
- Add more panel data graphing options -- time-series of group means 
  and boxplots by group -- and redesign the GUI for panel plots
- GUI code: modify to allow building against gtk3 (but this is not 
  yet recommended other than for testing)
- GUI icon view: provide a graphical representation for saved 
  "bundles"
- GUI dialog for calling user-defined functions: several improvements
- GUI access to X-12-ARIMA: give option of writing and editing x12a 
  .spc file
- New accessor, $vma: retrieves the vector moving average form of a 
  VAR or VECM
- New function, inlist(): gives the position of a series within a 
  named list or zero if the series is not present
- New function, isconst(): determines whether a series or vector has 
  a constant value, and optionally tests for either time-invariance 
  or cross-sectional invariance for panel-data series
- New function, strsub(): substitutes a specified replacement for a 
  specified sub-string in its first (string) argument
- "estimate" command: document the --quiet flag; and also enable the 
  --quiet option for "system"
- "summary" command: add an option to print summary stats for the 
  columns of a named matrix
- "outfile" command: add facility to redirect output to stderr or 
  stdout
- "setobs" command: add option to attach observation labels from a 
  named file
- New function, errmsg(): returns the gretl error message associated 
  with a given integer error code
- New function, rownames(): complements the colnames() function for 
  matrices
- New function mrls(); implements restricted least squares estimation 
  for data in matrix form
- The sdc() function (column standard deviations): add an optional 
  second argument to control the divisor